refactor flink